# Drawing-List-Manager

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  dlm-ui-sketch-v2.html  environment.yml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: register-domain.instructions.md
.github/prompts/: consume-toolkit-bump.prompt.md
.github/workflows/: copilot-setup-steps.yml
backend/: app.py  requirements.txt
backend/core/: __init__.py  drawing_number.py  excel_export.py  excel_import.py  folder_scan.py  migration.py  project_config.py  project_scan.py  register.py  standards.py
backend/tests/: test_app.py  test_drawing_number.py  test_folder_scan.py  test_migration.py  test_project_config.py  test_project_scan.py  test_register_filename.py  test_register_validation.py  test_standards.py
docs/: API.md
docs/codebase/: .codebase-scan.txt
docs/decisions/: 2026-04-30-pre-launch-cleanup.md  2026-04-30-schema-version-counters.md  2026-05-03-folder-scan-design.md  2026-05-03-register-filename-pattern.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  splash.html  updater.html  vite.config.js
frontend/src/: App.jsx  api.js  dirty.js  main.jsx  operations.js  selection.js  styles.js  tokens.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/dlm-backend/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  sidecar.rs
frontend/src/views/: LandingView.jsx  (+1 more)
icons/proposals/: README.md
(+26 files in other folders)
