[package]
name = "r3p-drawing-list-manager"
version = "1.0.0"
description = "R3P Drawing List Manager — Tauri desktop shell"
authors = ["ROOT3POWER ENGINEERING"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the generated lib name distinct from the binary.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
desktop-toolkit = { git = "https://github.com/chamber-19/desktop-toolkit", tag = "v2.3.0" }

[package.metadata.desktop-toolkit]
library-tag = "v2.3.0"
shim-tag    = "v2.3.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
